--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				</li>
 			</ul>
 			<div class="contacts">
-				<a href="" class="phoneButton">
+				<a href="tel:+79034517773" class="phoneButton">
 					<img src="phoneicon.svg" alt="">
 					<p>79034517773</p>
 				</a>
