--- a/flat2.html
+++ b/flat2.html
@@ -26,7 +26,7 @@
 			<label for="hamburger">
 				<span></span>
 			</label>
-			<a href="#/" class="logo">
+			<a href="index.html" class="logo">
 				<img src="logoicon.svg" alt="">
 			</a>
 			<ul class="menu">
@@ -39,14 +39,14 @@
 					</nav>
 				</li>
 				<li>
-					<a href="">Обратная связь</a>
+					<a href="comments.html">Обратная связь</a>
 				</li>
 				<li>
-					<a href="">О компании</a>
+					<a href="about-company.html">О компании</a>
 				</li>
 			</ul>
 			<div class="contacts">
-				<a href="" class="phoneButton">
+				<a href="tel:+79034517773" class="phoneButton">
 					<img src="phoneicon.svg" alt="">
 					<p>79034517773</p>
 				</a>
@@ -92,7 +92,7 @@
     </main>
     <footer>
 		<div class="container">
-			<a href="#/" class="logo">
+			<a href="index.html" class="logo">
 				<img src="logoicon.svg" alt="">
 			</a>
 			<ul class="menu">
